force-app/src/objects/ffr__InquiryTemplateRCP__c.object
<CustomObject>
    <description>Stores the list of related content panes that can be made available on an action view template.</description>
    <fields>
        <fullName>ffr__DataviewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dataview Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Action View Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Action View Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__RelatedContentPane__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Content Pane</label>
        <referenceTo>ffr__RelatedContentPane__c</referenceTo>
        <relationshipLabel>Action View Template RCPs</relationshipLabel>
        <relationshipName>InquiryTemplateRCPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Action View Template RCP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Template RCPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>